desarrollamos la estructura inicial de la pagina con lo que pide la tarea 1

--- a/recursos-apoyo.html
+++ b/recursos-apoyo.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Desarrollador de páginas web</title>
+    <meta name="viewport" content="width=D, initial-scale=1.0">
+    <title>Desarrolla tu pagina web</title>
 </head>
 <body>
     <header>
+        <h1>Tu idea hecha una página web</h1>
         <nav>
             <ul>
                 <li>
@@ -24,24 +25,12 @@
                 </li>
             </ul>
         </nav>
-        <div>
-            <img src="./Imagenes/logo.jpg" alt="logo">
-        </div>
     </header>
     <main>
         <section>
-            <h1>Tu idea hecha una pagina web</h1>
-            <img src="./Imagenes/personas trabajando.jpg" alt="personas-trabajando"
-            <p>Nuestra organizacion pretende partir de una idea a una pagina web, gracias al apoyo de diferentes especialistas en el area de programacion. Te invitamos a checar nuestro sitio web y contacto.</p>
-        </section>
-        <section>
-            <h2>Razones para crear tu pagina web</h2>
-            <ol>
-                <li>Mejorar la imagen de tu empresa u organizacion</li>
-                <li>Integrar aspectos nuevos a tu organizacion</li>
-                <li>Mayor conocimiento de tu empresa en el mercado</li>
-                <li>Facil acceso para tus clientes</li>
-            </ol>
+            <h1>Recursos de apoyo para tu empresa</h1>
+            <h2>En este apartado vas a encontrar datos que te pueden interesar respecto al desarrollo de las paginas web y tu empresa u organizacion</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/dzn9Dy1kC5Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     </main>
     <aside>
