--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Desarrollador de páginas web</title>
+    <link rel="stylesheet" href="/estilo.css">
 </head>
 <body>
     <header>
@@ -24,18 +25,19 @@
                 </li>
             </ul>
         </nav>
-        <div>
+        <div class="imagenLogo">
             <img src="./Imagenes/logo.jpg" alt="logo">
         </div>
     </header>
     <main>
-        <section>
+        <section class="tituloInicio">
             <h1>Tu idea hecha una pagina web</h1>
-            <img src="./Imagenes/personas trabajando.jpg" alt="personas-trabajando"
+            <img src="./Imagenes/personas trabajando.jpg" alt="personas-trabajando">
             <p>Nuestra organizacion pretende partir de una idea a una pagina web, gracias al apoyo de diferentes especialistas en el area de programacion. Te invitamos a checar nuestro sitio web y contacto.</p>
         </section>
+
         <section>
-            <h2>Razones para crear tu pagina web</h2>
+            <h2 id="subtituloInicio">Razones para crear tu pagina web</h2>
             <ol>
                 <li>Mejorar la imagen de tu empresa u organizacion</li>
                 <li>Integrar aspectos nuevos a tu organizacion</li>
@@ -48,7 +50,11 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDq6bzvy57SBctiiQejRtUn-nn4zIwz2yujg&usqp=CAU" alt="redes sociales"
     </aside>
     <footer>
+        <iconify-icon icon="jam:instagram"></iconify-icon>
+        <iconify-icon icon="ci:facebook"></iconify-icon>
         <p>Todos los derechos reservados 2022</p>
     </footer>
+    <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
 </body>
 </html>
