--- a/index.html
+++ b/index.html
@@ -4,31 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Desarrollador de páginas web</title>
+    <title>Soluciones a tu alcance</title>
     <link rel="stylesheet" href="/estilo.css">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li>
+        <nav class="barraPrincipal">
+            <ul class="barraNavegacion">
+                <li class="navegadorItem">
                     <a href="./index.html">Inicio</a>
                 </li>
-                <li>
+                <li class="navegadorItem">
                     <a href="./quienes-somos.html">¿Quienes somos?</a>
                 </li>
-                <li>
+                <li class="navegadorItem">
                     <a href="./nuestros-servicios.html">Nuestros servicios</a>
                 </li>
-                <li>
+                <li class="navegadorItem">
                     <a href="./recursos-apoyo.html">Recursos de apoyo</a>
+                </li>
+                <li class="navegadorItem">
+                    <input type="Busqueda", id="Busqueda" placeholder="Buscar">
+                </li>
+                <li class="navegadorItem">
+                    <a>Carrito de compras</a>
                 </li>
             </ul>
         </nav>
+
         <div class="imagenLogo">
-            <img src="./Imagenes/logo.jpg" alt="logo">
+            <img src="./Imagenes/kink solutionsoriginal.png" alt="logo">
         </div>
     </header>
+
     <main>
         <section class="tituloInicio">
             <h1>Tu idea hecha una pagina web</h1>
@@ -37,7 +45,7 @@
         </section>
 
         <section>
-            <h2 id="subtituloInicio">Razones para crear tu pagina web</h2>
+            <h3 id="subtituloInicio">Razones para crear tu pagina web</h3>
             <ol>
                 <li>Mejorar la imagen de tu empresa u organizacion</li>
                 <li>Integrar aspectos nuevos a tu organizacion</li>
@@ -46,9 +54,12 @@
             </ol>
         </section>
     </main>
-    <aside>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDq6bzvy57SBctiiQejRtUn-nn4zIwz2yujg&usqp=CAU" alt="redes sociales"
-    </aside>
+         <section>
+        <aside>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDq6bzvy57SBctiiQejRtUn-nn4zIwz2yujg&usqp=CAU" alt="redes sociales"
+
+          </section>
+   
     <footer>
         <iconify-icon icon="jam:instagram"></iconify-icon>
         <iconify-icon icon="ci:facebook"></iconify-icon>
